<resources>
    <string name="app_name">BBIT2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="createaccount">Create Account</string>
    <string name="login">login</string>
    <string name="signupalert">Dont have an account? Signup</string>


</resources>
