<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:visibility="visible"
    android:paddingTop="@dimen/sixetyfive"
    android:background="@color/material_grey_700"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        />
    <Button
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:onClick="navigatetoHome"
        android:background="@color/material_red_100"/>

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:text="@string/signupalert"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:onClick="createaccount"
        android:background="@color/material_red_100"/>


</LinearLayout>

